lab1/Test/L1-A-12-30.output
Error Type B at Line 8
Error Type A at Line 24
Error Type B at Line 29
