lab1/Test/L1-A-12-30.cmm
struct Nnl9QIpDnCN3 Vrlbu6elah3P_d ( ) {
  float m3A9Eyq_Q [ 959484625 ] = Uwd68Lb5eYc3ddVPV 
    = VSB && uumfjs45eMj4dB1cg != sZivlp0NAItu / - bg 
    ( z6_a , woev || vZhsgO1 > vTBYhguTT - ysh [ oTBLUxgBQuDkIeu 
    = qAA5q == ! ! ( ER >= ! j4O [ Mpps8D_ && GJ5kAEC5oP31UyJ 
    < _k - ( j5Fc0dZVwSQrntWhFnPO || xl4QIu4qW <= YP + 
    ib1gd7mJSdd29_JbS * K9Ru8LvP ( NQzgM0PVyeGI2BJld5 
    = FPsCZew ) ) - - - 1064810308.570521503 Sv0bznuVCt69i 
    ] . E_0 ) + - DX / 1160069567 ] * ! ! ! oKeAsKxxt 
    ( ) ) . ZiMSonAq20P ;
}
int Jv6vNVvD03sT81w , T 

;
struct {
}GUsKF4bWA 
;
int ;
int ;
int ;
int sksir18ymKA ( int EH1twZ5zHeBAO4L , struct Ujd3MElfWiZx8ZPaaV_ 
  {
  struct ek_7 eFdIIk851_Zq ;
}PXqSrOcuTZ1rdkFrqLv $) {
  int i , wN ;
  if ( MCPNVrjJ )   while ( DM02yfn2G )   xkzt ;

else   if ( oByGxUBS )   if ( AaRisrf4vrJTLqXKQL ) 
      return ;
else {
  }


}
